Update comments count view. New media selection style.

--- a/Itgm/Itgm/Themes/Brushes.xaml
+++ b/Itgm/Itgm/Themes/Brushes.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="TwitterMainThemeColor">#55acee</Color>
+    <Color x:Key="TwitterMainThemeColor">#1CA0FF</Color>
     <Color x:Key="TwitterMainTextColor">#292f33</Color>
     <Color x:Key="TwitterAdditionalTextColor">#66757f</Color>
     <Color x:Key="TwitterLightGrayColor">#e1e8ed</Color>
