--- a/Itgm/Itgm/Views/ContentPage.xaml
+++ b/Itgm/Itgm/Views/ContentPage.xaml
@@ -59,7 +59,7 @@
                        Foreground="{StaticResource TwitterAdditionalTextBrush}"
                        TextTrimming="CharacterEllipsis"/>
             
-            <Grid Grid.Column="1">
+            <Grid Grid.Column="1" Margin="0,2,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
@@ -74,7 +74,7 @@
                            Text="публикаций"/>
             </Grid>
             
-            <Grid Grid.Column="2">
+            <Grid Grid.Column="2" Margin="0,2,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
@@ -89,7 +89,7 @@
                            Text="подписчиков"/>
             </Grid>
             
-            <Grid Grid.Column="3">
+            <Grid Grid.Column="3" Margin="0,2,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
