--- a/Itgm/Itgm/Themes/Brushes.xaml
+++ b/Itgm/Itgm/Themes/Brushes.xaml
@@ -8,6 +8,7 @@
     <Color x:Key="TwitterIconColor">#BDC6CC</Color>
     <Color x:Key="TwitterTweetBackgroundColor">#ffffff</Color>
     <Color x:Key="OpaqueGrayColor">#AA68768A</Color>
+    <Color x:Key="GrayColor">#9AA4B1</Color>
     
 
     <SolidColorBrush x:Key="TwitterMainThemeBrush" Color="{StaticResource TwitterMainThemeColor}"/>
@@ -17,6 +18,7 @@
     <SolidColorBrush x:Key="TwitterIconBrush" Color="{StaticResource TwitterIconColor}"/>
     <SolidColorBrush x:Key="TwitterTweetBackgroundBrush" Color="{StaticResource TwitterTweetBackgroundColor}"/>
     <SolidColorBrush x:Key="OpaqueGrayBrush" Color="{StaticResource OpaqueGrayColor}"/>
+    <SolidColorBrush x:Key="GrayBrush" Color="{StaticResource GrayColor}"/>
 
     <LinearGradientBrush x:Key="CuttedWhiteFillBrush" StartPoint="0,1" EndPoint="0,0">
         <GradientStop Color="#FFFFFFFF" Offset="0.2"/>
