--- a/Itgm/Itgm/Views/ContentPage.xaml
+++ b/Itgm/Itgm/Views/ContentPage.xaml
@@ -22,9 +22,9 @@
         <Grid Grid.Row="0" Background="Transparent">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="90"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.Resources>
@@ -37,8 +37,8 @@
                   HorizontalAlignment="Left" 
                   Margin="5,2,0,2"
                   Grid.Column="0"
-                  Width="25" Height="25">
-                <Border Name="AvatarImageMask" 
+                  Width="35" Height="35">
+                <Border Name="AvatarImageMask"
                         CornerRadius="4" 
                         Background="{StaticResource TwitterTweetBackgroundBrush}"/>
                 <Image Source="{Binding User.ProfilePicture, Mode=OneWay, IsAsync=True}" 
@@ -53,76 +53,28 @@
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
                        Grid.Column="0"
-                       Margin="37,0,10,0"
+                       Margin="45,0,0,0"
                        FontWeight="Normal"
-                       FontSize="13"
+                       FontSize="16"
                        Foreground="{StaticResource TwitterAdditionalTextBrush}"
                        TextTrimming="CharacterEllipsis"/>
             
-            <Grid Grid.Column="1" Margin="0,2,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" 
-                           VerticalAlignment="Bottom"
-                           TextAlignment="Center"
-                           Text="{Binding User.MediaCount}"/>
-                <TextBlock Grid.Row="1" 
-                           VerticalAlignment="Top"
-                           TextAlignment="Center"
-                           Text="публикаций"/>
-            </Grid>
-            
-            <Grid Grid.Column="2" Margin="0,2,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" 
-                           VerticalAlignment="Bottom"
-                           TextAlignment="Center"
-                           Text="{Binding User.FollowerCount}"/>
-                <TextBlock Grid.Row="1" 
-                           VerticalAlignment="Top"
-                           TextAlignment="Center"
-                           Text="подписчиков"/>
-            </Grid>
-            
-            <Grid Grid.Column="3" Margin="0,2,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" 
-                           VerticalAlignment="Bottom"
-                           TextAlignment="Center"
-                           Text="{Binding User.FollowingCount}"/>
-                <TextBlock Grid.Row="1" 
-                           VerticalAlignment="Top"
-                           TextAlignment="Center"
-                           Text="подписок"/>
-            </Grid>
-            <!--<Button Command="{Binding UpdateCommand}"
-                    HorizontalAlignment="Center" 
-                    FontSize="14"
-                    Background="Transparent"
-                    Foreground="White"
-                    Content="Обновить"/>-->
 
-            <!--<CheckBox Style="{StaticResource AnimatedSwitch}" 
-                      Width="40"
-                      Command="{Binding SwitchContentCommand}"
-                      VerticalAlignment="Center"
-                      HorizontalAlignment="Right" 
-                      Margin="0,0,0,0"/>-->
-
-            <!--<Button Command="{Binding ReloginCommand}"
-                    HorizontalAlignment="Right" 
-                    Background="Transparent"
-                    Foreground="White"
-                    Margin="0,0,5,0"
-                    Content="Выйти"/>-->
+            <TextBlock Grid.Row="0" Grid.Column="1"
+                        TextAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="{Binding User.MediaCount, StringFormat={}{0:#,#0}&#x0a;публикаций}"/>
+            
+            <TextBlock Grid.Row="0" Grid.Column="2"
+                        TextAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="{Binding User.FollowerCount, StringFormat={}{0:#,#0}&#x0a;подписчиков}"/>
+            
+            <TextBlock Grid.Row="0" Grid.Column="3"
+                        TextAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="{Binding User.FollowingCount, StringFormat={}{0:#,#0}&#x0a;подписок}"/>
+            
         </Grid>
         <ContentControl Grid.Row="1" Margin="5" Content="{Binding CurrentContent, Mode=OneWay}"/>
     </Grid>
